# rust-jabs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bitcoin_scenario_speed.rs  event_speed.rs  propagate_speed.rs
src/: consensus.rs  ledger_data.rs  lib.rs  log.rs  main.rs  network.rs  scenario.rs  simulator.rs  tests.rs
src/consensus/: algorithm.rs  blockchain.rs  config.rs
src/consensus/algorithm/: nakamoto_consensus.rs
src/consensus/blockchain/: local_block.rs  local_block_dag.rs  local_block_tree.rs
src/consensus/config/: nakamoto_consensus_config.rs
src/ledger_data/: bitcoin_block.rs  block.rs  block_factory.rs  pow.rs  single_parent.rs
src/log/: block_confirmation_logger.rs  block_generation_logger.rs  block_propagation_delay_logger.rs  blockchain_reorg_logger.rs
src/network/: bitcoin_network.rs  ecs.rs  message.rs  node.rs  p2p.rs  packet.rs  resource.rs  stats.rs
src/network/bitcoin_network/: bitcoin_block_mining.rs  bitcoin_generate_block.rs  bitcoin_receive.rs  bitcoin_scenarios_preparation.rs  bitcoin_send.rs
src/network/ecs/: bitcoin_ecs.rs
src/network/message/: inv_message.rs  packet.rs
src/network/node/: connection.rs  link.rs  neighbors.rs  nodes.rs
src/network/resource/: bitcoin_resource.rs  ethereum_resource.rs
src/network/stats/: eighty_six_countries.rs
src/scenario/: bitcoin_global_network_scenario.rs
src/simulator/: event.rs  mod.rs  rand.rs  randomness_engine.rs  scheduled_event.rs
src/simulator/event/: block_confirmation_event.rs  mod.rs  (+7 more)
src/tests/: ecs_speed_test.rs  mod.rs  simulator_engine_test.rs
(+3 files in other folders)
