[package]
name = "rust-jabs"
version = "0.0.1"
authors = ["Seyyed Arash Azimi"]
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "propagate_speed"
harness = false

#[[bench]]
#name = "event_speed"
#harness = false