[package]
name = "rust-jabs"
version = "0.0.3"
authors = ["Seyyed Arash Azimi"]
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
strum = "0.25.0"
strum_macros = "0.25.1"
csv = "1.2.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bitcoin_scenario_speed"
harness = false